# itlab_2018_minipr

./: .gitignore  CMakeLists.txt  OpenMP.cpp  README.md  main.cpp  main_parallel_for.cpp  mpi queue.cpp  mpi_cin.cpp  mpi_rand.cpp  omp_tasks.cpp  omp_tasks.pl  parallel_for.cpp  parallel_for.h  parallel_reduce.cpp  parallel_reduce.h  parallel_vector.cpp  parallel_vector.h  parallel_vector2.cpp  tbb_quicksort.cpp
auto_parallel/: .gitignore  CMakeLists.txt
auto_parallel/headers/: basic_task.h  intracomm.h  it_queue.h  message.h  parallelizer.h  task_graph.h  transfer.h
auto_parallel/samples/: CMakeLists.txt  dmerge.cpp  matrix_mul.cpp  merge.cpp  quicksort.cpp
auto_parallel/sources/: CMakeLists.txt  basic_task.cpp  communicator.cpp  intracomm.cpp  message.cpp  parallel_core.cpp  parallelizer.cpp  task_graph.cpp  transfer.cpp
include/: memory_manager.h  parallel_for.h  parallel_reduce.h  parallel_vector.h
samples/: main.cpp  main_parallel_for.cpp  matrixvector.cpp
savkin/: mul2.cpp  quicksort.cpp  tbb_qsort.cpp
src/: memory_manager.cpp  parallel_for.cpp  parallel_vector.cpp
